--- a/css_entr_6.html
+++ b/css_entr_6.html
@@ -6,9 +6,14 @@
 	</head>
 	<body>
 		<div id="main">
-			<div class="head">
-				<div id="head1"></div>
-				<div id="head2"></div>
+			<div id="main1">
+
+			</div>
+			<div id="main2">
+				<div class="head">
+					<div id="head1"></div>
+					<div id="head2"></div>
+				</div>
 			</div>
 		</div>
 	</body>
