--- a/css_entr_6.html
+++ b/css_entr_6.html
@@ -7,12 +7,37 @@
 	<body>
 		<div id="main">
 			<div id="main1">
-
+				<div class="fi"></div>
+				<div class="se"></div>
 			</div>
+
 			<div id="main2">
-				<div class="head">
-					<div id="head1"></div>
-					<div id="head2"></div>
+				<div class="fi"></div>
+				<div class="se"></div>
+			</div>
+
+			<div id="main3">
+				<div class="fi"></div>
+				<div class="se">
+					<div class="fi">
+						<div class="border"></div>
+						<div class="glasses">
+							<div class="container">
+								<div class="eye"></div>
+								<div class="eye"></div>
+							</div>
+							<div class="fi"></div>
+							<div class="se"></div>
+							<div class="se"></div>
+						</div>
+						<div class="mouth"></div>
+						<div class="th">
+							<div></div><div></div><div></div><div></div><div></div><div></div>
+							<div></div><div></div><div></div><div></div><div></div><div></div>
+							<div></div><div></div><div></div><div></div><div></div><div></div>
+						</div>
+						<div class="fo"></div>
+					</div>
 				</div>
 			</div>
 		</div>
