--- a/galeria.html
+++ b/galeria.html
@@ -7,24 +7,41 @@
 	<body>
 		<div id="container">
 			<div>
-				<img src="https://placekitten.com/200/150">
+			<img src="https://picsum.photos/800/600">
 			</div>
 			<div>
-				<img src="https://placekitten.com/200/150">
+				<img src="https://picsum.photos/800/600">
 			</div>
 			<div>
-				<img src="https://placekitten.com/200/150">
+				<img src="https://picsum.photos/800/600">
 			</div>
 			<div>
-				<img src="https://placekitten.com/200/150">
+				<img src="https://picsum.photos/800/600">
 			</div>
 			<div>
-				<img src="https://placekitten.com/200/150">
+				<img src="https://picsum.photos/800/600">
 			</div>
 			<div>
-				<img src="https://placekitten.com/200/150">
+				<img src="https://picsum.photos/800/600">
+			</div>
+			<div>
+			<img src="https://picsum.photos/800/600">
+			</div>
+			<div>
+				<img src="https://picsum.photos/800/600">
+			</div>
+			<div>
+				<img src="https://picsum.photos/800/600">
+			</div>
+			<div>
+				<img src="https://picsum.photos/800/600">
+			</div>
+			<div>
+				<img src="https://picsum.photos/800/600">
+			</div>
+			<div>
+				<img src="https://picsum.photos/800/600">
 			</div>
 		</div>
-
 	</body>
 </html>
